deployment.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: aichan-frontend
  labels:
    app: aichan-frontend
  annotations:
    keel.sh/policy: all
    keel.sh/trigger: poll
spec:
  replicas: 1
  selector:
    matchLabels:
      app: aichan-frontend
  template:
    metadata:
      labels:
        app: aichan-frontend
    spec:
      imagePullSecrets:
      - name: registrypullsecret
      containers:
      - name: aichan-frontend
        image: docker.dulik.net/aichan-frontend:latest
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: aichan-backend
  labels:
    app: aichan-backend
  annotations:
    keel.sh/policy: all
    keel.sh/trigger: poll
spec:
  replicas: 1
  selector:
    matchLabels:
      app: aichan-backend
  template:
    metadata:
      labels:
        app: aichan-backend
    spec:
      imagePullSecrets:
      - name: registrypullsecret
      containers:
      - name: aichan-backend
        image: docker.dulik.net/aichan-backend:latest
---

apiVersion: v1
kind: Service
metadata:
  name: aichan-frontend
spec:
  selector:
    app: aichan-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80

---

apiVersion: v1
kind: Service
metadata:
  name: aichan-backend
spec:
  selector:
    app: aichan-backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 9090
