ingress.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: aichan-backend-ingress
  annotations:
    nginx.ingress.kubernetes.io/add-base-url: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  tls:
  - hosts:
    - dulik.net
    secretName: dulik-tls
  rules:
  - host: dulik.net
    http:
      paths:
      - path: /aichan/api(/|$)(.*)
        backend:
          serviceName: aichan-backend
          servicePort: 80
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: aichan-frontend-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - dulik.net
    secretName: dulik-tls
  rules:
  - host: dulik.net
    http:
      paths:
      - backend:
          serviceName: aichan-frontend
          servicePort: 80
        path: /aichan
